8241741: Implement Text Blocks as a standard feature in javac
Reviewed-by: jlahoda